--- a/index.html
+++ b/index.html
@@ -209,15 +209,34 @@
                 <h2><span> Mon Portfolio</span></h2>
             </div>
             <p class="port-text">
-                Here is some of my work that I've done in various programming languages.
+                Voici quelques-uns de mes travaux que j'ai effectués dans divers langages de programmation.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/malischool.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Plateforme malischool</h3>
+                        <div class="icons">
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="https://www.youtube.com/@malischool9035" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/jca.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Site web pour les jeunes</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -233,10 +252,48 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/sort.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Un API de tirage</h3>
+                        <div class="icons">
+                            <a href="https://demoodc-3bc5c.web.app/" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/hackathon.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Pour les compétitions</h3>
+                        <div class="icons">
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item" style="border: 1px solid orange;">
+                    <div class="image" >
+                        <img src="img/erp_log.png">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Un projet pour Orange Mali</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
@@ -252,12 +309,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="img/environ.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Site de recyclage</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://mali-anviron.ml/?i=1" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
@@ -271,12 +328,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port4.jpg" alt="">
+                        <img src="img/art-mali.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Site artisanal</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="http://art-mali.epizy.com/" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
@@ -290,12 +347,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/art-mali.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Site artisanal</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="http://art-mali.epizy.com/" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
@@ -309,31 +366,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/art-mali.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Site artisanal</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port7.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="http://art-mali.epizy.com/" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
