--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/art-mali.png" alt="">
+                        <img src="img/errors.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Site artisanal</h3>
+                        <h3>Un site pour catcher les erreurs</h3>
                         <div class="icons">
                             <a href="http://art-mali.epizy.com/" class="icon">
                                 <i class="fab fa-github"></i>
@@ -364,12 +364,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" style="border: 1px solid orange;">
                     <div class="image">
-                        <img src="img/art-mali.png" alt="">
+                        <img src="img/ticodc.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Site artisanal</h3>
+                        <h3>Application pour chat</h3>
                         <div class="icons">
                             <a href="http://art-mali.epizy.com/" class="icon">
                                 <i class="fab fa-github"></i>
