section contact en cours

--- a/index.html
+++ b/index.html
@@ -374,25 +374,17 @@
                     <h2><span>Contacter Moi</span></h2>
                 </div>
                 <div class="contact-content-con">
+
                     <div class="left-contact">
+                       <div class="left-icon">
+                        <i class="fas fa-phone-office"></i>
+                       </div>
+                       <div class="right-icon">
+
+                       </div>
                        
-                        <div class="contact-icons">
-                            <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fas fa-globe-africa"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                            </div>
-                        </div>
                     </div>
+
                     <div class="right-contact">
                         <form action="" class="contact-form">
                             <div class="input-control i-c-2">
