--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
                     Je suis un développeur full-stack passionné par les métiers de développement 
                     d'applications web et mobile.
                 </p>
-                <div class="btn-con" align="center">
+                <div class="liens" align="center">
                     <a href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
-                        <span class="btn-text">Télécharger le CV</span>
+                        <span class="btn-text">Télécharger le CV ici</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+
+                    <a href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
+                        <span class="btn-text">Envoyer un mail</span>
+                        <span class="btn-icon"><i class="fas fa-envelope"></i></span>
                     </a>
                 </div>
             </div>
@@ -42,7 +47,7 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2><span>Apropos de moi</span></h2>
+                <h2><span>A propos de moi</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -397,12 +402,27 @@
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message ici..."></textarea>
                             </div>
-                            <div class="submit-btn">
-                                <a href="#" href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
+                            <div class="submits-btn">
+
+                                <div class="telecharger">
+                                     <a href="#" href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
                                     <span class="btn-text">Télécharger le CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
+                                </div>
+                               
+
+                                <div class="send">
+                                      <a href="" href="#" class="main-btn" target="_blank">
+                                    <span class="btn-text">Envoyer</span>
+                                    <span class="btn-icon"><i class="fas fa-briefcase"></i></span>
+                                </a>
+                                </div>
+                              
+
+
                             </div>
+
                         </form>
                     </div>
                 </div>
