--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
-        <div class="header-content" align="center">
+        <div class="header-content" >
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
@@ -30,7 +30,7 @@
                     Je suis un développeur full-stack passionné par les métiers de développement 
                     d'applications web et mobile.
                 </p>
-                <div class="liens" align="center">
+                <div class="liens" >
                     <a href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
                         <span class="btn-text">Télécharger le CV ici</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="right-about">
                     <div class="about-item">
-                        <div class="abt-text" align="center">
+                        <div class="abt-text" >
                             <p class="large-text">+15</p>
                             <p class="small-text">Projets<br />  réalisés</p>
                         </div>
