--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="jKrgFxbM4YbVUN-ol10zAr9AV8nv9gblbkcRYpyD9I4" />
+    <meta name="google-site-verification" content="jKrgFxbM4YbVUN-ol10zAr9AV8nv9gblbkcRYpyD9I4">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/noss.png" alt="">
+                    <img src="img/noss.png" alt="Adama Coulibaly">
                 </div>
             </div>
             <div class="right-header">
@@ -49,6 +49,8 @@
             <div class="main-title">
                 <h2><span>A propos de moi</span></h2>
             </div>
+
+
             <div class="about-container">
                 <div class="left-about" >
                     <h4>Mes informations</h4>
@@ -63,22 +65,25 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text" >
                             <p class="large-text">+15</p>
-                            <p class="small-text">Projets<br />  réalisés</p>
+                            <p class="small-text">Projets réalisés</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">01</p>
-                            <p class="small-text">an <br /> d’expériences</p>
+                            <p class="small-text">an d’expériences</p>
                         </div>
                     </div>
                 </div>
-                </div>
             </div>
+
+
+
             <div class="about-stats">
                 <h4 class="stat-title">Mes compétences</h4>
                 <div class="progress-bars">
@@ -219,7 +224,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/malischool.png" alt="">
+                        <img src="img/malischool.png" alt="Malischool">
                     </div>
                     <div class="hover-items">
                         <h3>Plateforme malischool</h3>
@@ -236,7 +241,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/jca.png" alt="">
+                        <img src="img/jca.png" alt="JCA-Mali">
                     </div>
                     <div class="hover-items">
                         <h3>Site web pour les jeunes</h3>
@@ -253,7 +258,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/sort.jpg" alt="">
+                        <img src="img/sort.jpg" alt="Tirage">
                     </div>
                     <div class="hover-items">
                         <h3>Un API de tirage</h3>
@@ -270,7 +275,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/hackathon.png" alt="">
+                        <img src="img/hackathon.png" alt="hackathon">
                     </div>
                     <div class="hover-items">
                         <h3>Pour les compétitions</h3>
@@ -287,7 +292,7 @@
                 </div>
                 <div class="portfolio-item" style="border: 1px solid orange;">
                     <div class="image" >
-                        <img src="img/erp_log.png">
+                        <img src="img/erp_log.png" alt="ERP">
                     </div>
                     <div class="hover-items">
                         <h3>Un projet pour Orange Mali</h3>
@@ -304,7 +309,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/environ.jpg" alt="">
+                        <img src="img/environ.jpg" alt="environ">
                     </div>
                     <div class="hover-items">
                         <h3>Site de recyclage</h3>
@@ -321,7 +326,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/art-mali.png" alt="">
+                        <img src="img/art-mali.png" alt="Mali art">
                     </div>
                     <div class="hover-items">
                         <h3>Site artisanal</h3>
@@ -338,7 +343,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/errors.jpg" alt="">
+                        <img src="img/errors.jpg" alt="Errors notes">
                     </div>
                     <div class="hover-items">
                         <h3>Un site pour catcher les erreurs</h3>
@@ -355,7 +360,7 @@
                 </div>
                 <div class="portfolio-item" style="border: 1px solid orange;">
                     <div class="image">
-                        <img src="img/ticodc.png" alt="">
+                        <img src="img/ticodc.png" alt="Tic ODC">
                     </div>
                     <div class="hover-items">
                         <h3>Application pour chat</h3>
@@ -391,7 +396,7 @@
                     </div>
 
                     <div class="right-contact">
-                        <form action="" class="contact-form">
+                        <form action="contacts" class="contact-form">
                             <div class="input-control i-c-2">
                                 <input type="text" required placeholder="Votre nom">
                                 <input type="email" required placeholder="Votre email">
@@ -400,12 +405,12 @@
                                 <input type="text" required placeholder="Entrer votre objet">
                             </div>
                             <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message ici..."></textarea>
+                                <textarea name="messages" id="messages" cols="15" rows="8" placeholder="Message ici..."></textarea>
                             </div>
                             <div class="submits-btn">
 
                                 <div class="telecharger">
-                                     <a href="#" href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
+                                     <a href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
                                     <span class="btn-text">Télécharger le CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
@@ -413,7 +418,7 @@
                                
 
                                 <div class="send">
-                                      <a href="" href="#" class="main-btn" target="_blank">
+                                      <a href="#" class="main-btn" target="_blank">
                                     <span class="btn-text">Envoyer</span>
                                     <span class="btn-icon"><i class="fas fa-briefcase"></i></span>
                                 </a>
