--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
 
-                    <a href="AdamaCoulibaly.pdf" class="main-btn" target="_blank">
+                    <a href="mailto:coulibalyadamabekaye03@gmail.com" class="main-btn" target="_blank">
                         <span class="btn-text">Envoyer un mail</span>
                         <span class="btn-icon"><i class="fas fa-envelope"></i></span>
                     </a>
