--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
         </div>
     </div>
 
-    <div class="theme-btn">
+    <!-- <div class="theme-btn">
         <i class="fas fa-adjust"></i>
-    </div>
+    </div> -->
     <script src="app.js"></script>
 </body>
 
